<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#282A37"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:textAlignment="center"
        android:textSize="@dimen/title_text_size"
        android:text="@string/login_title"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_description"
        android:textAlignment="center"
        android:textColor="@color/hint_text_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:textColorHint="@color/hint_text_color"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:hint="@string/password"
        android:textColorHint="@color/hint_text_color"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#1D90F4"
        android:textSize="18sp"
       android:layout_gravity="end"
        android:text="@string/forgot_password" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login"
        android:textSize="23sp"
        android:backgroundTint="#1D90F4"/>
</LinearLayout>