<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#282A37"
    tools:context=".SignupAccountActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="@dimen/title_text_size"
        android:text="@string/signup_title"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_descrip"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#79869F"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstnameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:textSize="20sp"
            android:textColorHint="#79869F"
            android:ems="10"
            android:layout_marginEnd="10dp"
            android:inputType="text"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/lastnametxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/last_name"
            android:layout_marginStart="15dp"
            android:textColorHint="#79869F"
            android:inputType="text"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <EditText
        android:id="@+id/email2Txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/white"
        android:textColorHint="#79869F"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password2Txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:hint="@string/password"
        android:textSize="20sp"
        android:textColorHint="#79869F"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:hint="@string/re_password"
        android:textSize="20sp"
        android:textColorHint="#79869F"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/createaccountBtn"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/creat_account"
        android:textSize="23sp"
        android:backgroundTint="#1D90F4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="#79869F"
            android:gravity="end"
            android:text="@string/already_have_account" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#1D90F4"
            android:textSize="18sp"
            android:text="@string/login" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />



</LinearLayout>